# mariafm

./: .gitignore  .prettierrc.json  Caddyfile  Makefile  README.md  backup.sql  docker-compose.dev.yaml  docker-compose.prod.yaml  manage.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements.txt  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
about_projects/: admin.py  apps.py  models.py
about_projects/migrations/: 0001_initial.py
crew/: admin.py  apps.py  models.py
crew/migrations/: 0001_initial.py  0002_crew_people_crew.py
effectiveness/: admin.py  apps.py  models.py
effectiveness/migrations/: 0001_initial.py
footer/: admin.py  apps.py  models.py
footer/migrations/: 0001_initial.py  0002_alter_linksforadvertising_options_and_more.py  0003_footercaption.py  0004_alter_footercaption_caption.py  0005_footer.py
general/: admin.py  apps.py  models.py
general/migrations/: 0001_initial.py  0002_delete_project.py  0003_metrika.py
header/: admin.py  apps.py  models.py
header/migrations/: 0001_initial.py
landing/: admin.py  apps.py  models.py  urls.py  views.py
landing/migrations/: 0001_initial.py  0002_alter_project_options.py  0003_alter_project_options.py  0004_projectssection_project_section.py  0005_remove_project_section_delete_projectssection.py  0006_alter_project_options_project_order.py  0007_people.py  (+14 more)
mariafm/: asgi.py  settings.py  urls.py  wsgi.py
media_school/: admin.py  apps.py  models.py
projects/: models.py
radio/: admin.py  apps.py  models.py
team/: admin.py  apps.py  models.py
(+93 files in other folders)
